# paste-history

./: .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  _clang-format
benchmark/: CMakeLists.txt  FuzzySearchBenchmark.cpp  HistoryModelBenchmark.cpp
ext/gtest/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Config/: CMakeLists.txt  PasteHistoryConfig.h  PasteHistoryConfig.h.in
src/FuzzySearch/: CMakeLists.txt  FuzzySearch.cpp  FuzzySearch.h
src/HistoryTypes/: CMakeLists.txt  history_types.proto
src/PasteHistory/: CMakeLists.txt  FuzzySearchBox.h  HistoryListView.cpp  HistoryListView.h  HistoryModel.cpp  HistoryModel.h  HistoryView.cpp  HistoryView.h  PasteHistoryWindow.cpp  PasteHistoryWindow.h
src/PasteHistoryWindow/: CMakeLists.txt  Clipboard.cpp  Clipboard.h  HistoryItem.cpp  HistoryItem.h  HistoryItemDelegate.cpp  HistoryItemDelegate.h  HistoryItemModel.cpp  HistoryItemModel.h  HistoryModel.cpp  HistoryToolTip.cpp  HistoryToolTip.h  HistoryView.cpp  HistoryView.h  HistoryViewConstants.h  PasteHistoryWindow.cpp  PasteHistoryWindow.h
src/ProtobufTypes/: CMakeLists.txt  test.proto
src/SearchableHistory/: CMakeLists.txt  SearchableHistory.cpp  SearchableHistory.h
src/fuzzy_search/: CMakeLists.txt  FuzzySearch.cpp  FuzzySearch.h
src/resources/: dark_theme.qss  res.qrc  style.qrc  style.qss
test/: CMakeLists.txt  TestFuzzySearch.cpp  TestHistoryModel.cpp  TestSearchableHistory.cpp
